--- a/services/honey-card-generator/Dockerfile
+++ b/services/honey-card-generator/Dockerfile
@@ -1,1 +1,7 @@
-# TODO: implement
+FROM python:3.11-slim
+WORKDIR /app
+COPY requirements.txt .
+RUN pip install --no-cache-dir -r requirements.txt
+COPY . .
+EXPOSE 6000
+CMD ["python", "app.py"]
